--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,44 +9,49 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+    timeout-minutes: 20
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
-    
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r test_requirements.txt
-    
+
     - name: Install Chrome
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
-    
+
     - name: Start web server
       run: |
-        nohup python3 server.py 8000 > /dev/null 2>&1 &
-        sleep 5
-        for i in {1..10}; do
-          if curl -f -s http://localhost:8000/index.html > /dev/null; then
-            echo "Server is ready!"
-            exit 0
+        nohup python3 server.py 8000 > /tmp/server.log 2>&1 &
+        sleep 2
+        for i in $(seq 1 15); do
+          if curl -f -s -o /dev/null http://127.0.0.1:8000/index.html; then
+            echo "Server is ready at http://127.0.0.1:8000"
+            break
           fi
-          echo "Waiting for server... ($i/10)"
+          echo "Waiting for server... ($i/15)"
           sleep 1
+          if [ "$i" -eq 15 ]; then
+            echo "Server failed to start"
+            exit 1
+          fi
         done
-        echo "Server failed to start"
-        exit 1
-    
+
     - name: Run tests
+      env:
+        BASE_URL: http://127.0.0.1:8000
       run: |
-        pytest test_website.py test_modules.py test_comprehensive.py -v --html=report.html --self-contained-html
-    
+        pytest test_website.py test_modules.py test_comprehensive.py test_translations.py -v --html=report.html --self-contained-html
+
     - name: Upload test report
       uses: actions/upload-artifact@v4
       if: always()
